<resources>
    <string name="app_name">出差易商旅</string>
    <string name="dialog_default_cancel_title">取消</string>
    <string name="dialog_default_confirm_title">确定</string>
    <string name="index">首页</string>
    <string name="check">审批</string>
    <string name="order">订单</string>
    <string name="person">我</string>
    <string name="single">单程</string>
    <string name="twice">往返</string>
    <string name="set_out">出发</string>
    <string name="set_out_date">出发日期</string>
    <string name="return_date">返回日期</string>
    <string name="arrive">到达</string>
    <string name="search">查询</string>
    <string name="seat">舱位</string>
    <string name="quit_toast">再按一次退出出差易</string>
    <string name="index_tip">中国最专业的商旅服务公司,服务满意度超过99%</string>
    <string name="forget_psw">忘记密码?</string>
    <string name="forget_psw_title">忘记密码</string>
    <string name="login">登录</string>
    <string name="sure">确定</string>
    <string name="username">账号</string>
    <string name="phone">手机号</string>
    <string name="hint_login_username">手机/邮箱/账号</string>
    <string name="hint_login_phone">请输入手机号</string>
    <string name="hint_check_login_phone">请输入正确的手机号</string>
    <string name="hint_card_num">请输入证件号码</string>
    <string name="hint_sms_code">请填写验证码</string>
    <string name="sms_code">验证码</string>
    <string name="new_psw">新密码</string>
    <string name="hint_login_psw">请输入密码</string>
    <string name="hint_login_new_psw">请输入新密码</string>
    <string name="send_sms_again">重新发送</string>
    <string name="enter_mobile_error">请输入正确的账号</string>
    <string name="login_ing_tip">正在登录...</string>
    <string name="password">密码</string>
    <string name="find_psw_tip">只支持手机号的用户找回密码,非手机号注册的用户请访问官网找回密码</string>
    <string name="send_sms">发送验证码</string>
    <string name="setting">设置</string>
    <string name="set_psw">修改密码</string>
    <string name="set_psw_done">修改完成</string>
    <string name="apartment">部门</string>
    <string name="company">企业</string>
    <string name="logout">退出登录</string>
    <string name="news">新消息通知</string>
    <string name="check_version">检测更新</string>
    <string name="open">已开启</string>
    <string name="news_setting_tip">如果你要关闭或开启出差易的新消息通知,请在设备的 "设置" - "通知中心"功能中, 找到应用程序"出差易"进行修改</string>
    <string name="received_new">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="vibrate">震动</string>
    <string name="old_psw">原密码</string>
    <string name="hint_old_psw">原密码</string>
    <string name="hint_new_psw">新密码</string>
    <string name="check_psw">确认密码</string>
    <string name="hint_check_psw">请再次确认</string>
    <string name="choose_set_out_date">选择出发日期</string>
    <string name="choose_return_date">选择返程日期</string>
    <string name="choose_date">选择日期</string>
    <string name="choose_set_out_city">选择出发城市</string>
    <string name="choose_arrive_city">选择到达城市</string>
    <string name="choose_reason">请选择原因</string>
    <string name="edit_reason">填写原因</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    <string name="today">今天</string>
    <string name="hot_city">热门城市</string>
    <string name="submitting">正在请求网络</string>
    <string name="my_launch">我发起</string>
    <string name="un_check">待审批</string>
    <string name="checked">已审批</string>
    <string name="un_audit">待授权</string>
    <string name="audited">已授权</string>

    <string name="empty_no_data">这里什么都木有</string>
    <string name="empty_no_check">暂无订单</string>
    <string name="empty_no_flight">暂无航班</string>
    <string name="load_fail_click_reload">网络错误，请重试</string>
    <string name="load_fail">网络错误</string>
    <string name="success">提交成功</string>
    <string name="price_fail">价格已过期需重新查询</string>
    <string name="pre_day">前一天</string>
    <string name="book">预订</string>
    <string name="policy">差旅标准</string>
    <string name="money">￥%1$s起</string>
    <string name="money_no_end">￥%1$s</string>
    <string name="date_format">%1$s 至 %2$s</string>
    <string name="num">%1$s张</string>
    <string name="discount">%1$s折</string>
    <string name="next_day">后一天</string>
    <string name="time_tab">时间从早到晚</string>
    <string name="choose_city">请选择城市</string>
    <string name="choose_time">请选择日期</string>
    <string name="choose_certType">请证件类型</string>
    <string name="late_to_early_tab">时间从晚到早</string>
    <string name="low_to_high">价格从低到高</string>
    <string name="high_to_low">价格从高到低</string>
    <string name="price">价格</string>
    <string name="plane_company">航空公司</string>
    <string name="all_seat">全部舱位</string>
    <string name="flight_fund_detail">机建￥%1$s 燃油￥%2$s</string>
    <string name="returnPolicy">退票</string>
    <string name="changePolicy">改签</string>
    <string name="signPolicy">备注</string>
    <string name="low_price_title">因你未选择最低价格航班，请您选择原因：</string>
    <string name="pre_day_title">因你未提前预订航班，请您选择原因：</string>
    <string name="return_order_title">请选择退票的原因：</string>
    <string name="change_order_title">请选择改签的原因：</string>
    <string name="commit">提交</string>
    <string name="detail">明细</string>
    <string name="return_change">退改签</string>
    <string name="flight_price">机票</string>
    <string name="passenger">乘机人</string>
    <string name="choose_passenger">选择乘机人</string>
    <string name="enter_contact">填写联系人</string>
    <string name="enter_phone">填写联系人电话</string>
    <string name="choose_department">选择部门</string>
    <string name="add">添加</string>
    <string name="safe_fee">航意险</string>
    <string name="delay_fee">航延险</string>
    <string name="contact">联系人</string>
    <string name="contact_phone">联系电话</string>
    <string name="all_pay">统一支付</string>
    <string name="pay_way">支付方式</string>
    <string name="ticket_tip">只支持直接出票</string>
    <string name="check_num">审批单号 %1$s</string>
    <string name="check_num_no_end">审批单号</string>
    <string name="project_num">所属项目 %1$s</string>
    <string name="project_num_no_end">所属项目</string>
    <string name="pay_sure">确认</string>
    <string name="travel">行程</string>
    <string name="set_out_detail_time">出发时间</string>
    <string name="should_pay">应付金额</string>
    <string name="pay_money_tip">在出票后将从贵公司账户中直接扣款</string>
    <string name="sure_pay">确认出票</string>
    <string name="dai_ban_zhi_ji">代办值机</string>
    <string name="card_type">证件类型</string>
    <string name="card_num">证件号码</string>
    <string name="id_card">身份证</string>
    <string name="must_choose">必选</string>
    <string name="reason_common">(因公)</string>
    <string name="reason_private">因私</string>
    <string name="call">呼叫</string>
    <string name="common_name">常用姓名</string>
    <string name="airport_fee">机建</string>
    <string name="oil_fee">燃油</string>
    <string name="stop_tip">经停</string>
    <string name="edit">编辑乘机人</string>
    <string name="choose_check_num">选择审批单号</string>
    <string name="choose_project">选择所属项目</string>
    <string name="enter_psw_error">两次密码不一致</string>
    <string name="change_psw_success">修改密码成功</string>
    <string name="travel_reason">出差事由</string>
    <string name="trip_city">出差地点</string>
    <string name="start_date">起始日期</string>
    <string name="end_date">截止日期</string>
    <string name="trip_plan">出差计划</string>
    <string name="checkcancle">撤销</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="commit_success">提交成功</string>
    <string name="apply_time">申请时间</string>
    <string name="book_success_tip">您的订单已经提交成功\n我们将尽快处理,稍后通知\n您预订结果</string>
    <string name="return_order_success_tip">退票申请提交成功\n我们将尽快处理</string>
    <string name="change_order_success_tip">改签申请提交成功\n我们将尽快处理</string>
    <string name="net_check_success_tip">待办值机提交成功\n我们将尽快处理</string>
    <string name="plane">飞机</string>
    <string name="pay">付款</string>
    <string name="return_order_title_tip">退票费按产品规定。</string>
    <string name="return_order_desc">若费用变更,我们将及时联系您。申请退票后,座位会被取消。</string>
    <string name="change_order_desc">改签时需要支付机票差价及政策规定的改签手续费。\n 若费用变更,我们将及时联系您。如有其它问题,请及时联系客服人员。</string>
    <string name="order_num_no_end">订单号  %1$s</string>
    <string name="pre_day_btn"><![CDATA[< 前一天]]></string>
    <string name="next_day_btn"><![CDATA[后一天 >]]></string>
    <string name="add_company_passenger">添加企业用户</string>
    <string name="ic_person">&#xe105;</string>
    <string name="get_sms_code_fail">获取验证码失败</string>
    <string name="check_sms_code_fail">验证码不一致</string>
    <string name="dialog_content_give_up_submit">确认放弃已有操作？</string>
    <string name="cancel_success">取消成功</string>
    <string name="travel_apply">出差申请</string>
    <string name="service_fee">服务费</string>

</resources>
