<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:paddingTop="1dp" >

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/sunday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/monday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/tuesday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/wednesday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/thursday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/friday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/saturday" />
    </LinearLayout>
    <View
        style="@style/horizontal_line"/>
    <ListView
        android:id="@+id/lv_calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:listSelector="@null" />

</LinearLayout>