<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_30p"
            android:textSize="@dimen/textsize_13sp"
            android:textColor="@color/color_222222"
            android:text="@string/old_psw"
            />
        <com.ccy.chuchaiyi.widget.EditTextWithDel
            android:id="@+id/old_psw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_200p"
            style="@style/login_edittext"
            android:textSize="@dimen/textsize_13sp"
            android:digits="\@-+._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ"
            android:hint="@string/hint_old_psw"
            android:imeOptions="actionNext"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_30p"
            android:textSize="@dimen/textsize_13sp"
            android:textColor="@color/color_222222"
            android:text="@string/password"
            />
        <com.ccy.chuchaiyi.widget.EditTextWithDel
            android:id="@+id/new_psw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_200p"
            style="@style/login_edittext"
            android:digits="\@-+._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ"
            android:hint="@string/hint_new_psw"
            android:textSize="@dimen/textsize_13sp"
            android:imeOptions="actionNext"/>
    </FrameLayout>

    <View
        style="@style/personal_page_top_line" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_30p"
            android:textSize="@dimen/textsize_13sp"
            android:textColor="@color/color_222222"
            android:text="@string/check_psw"
            />
        <com.ccy.chuchaiyi.widget.EditTextWithDel
            android:id="@+id/new_psw_again"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_200p"
            style="@style/login_edittext"
            android:digits="\@-+._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ"
            android:hint="@string/hint_check_psw"
            android:textSize="@dimen/textsize_13sp"
            android:imeOptions="actionNext"/>
    </FrameLayout>

    <Button
        android:id="@+id/btn_sure"
        android:background="@drawable/selector_common_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/single_line_height_132px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/margin_30p"
        android:layout_marginLeft="@dimen/margin_30p"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_18sp"
        android:text="@string/sure"/>
</LinearLayout>