<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/progress_img_popbg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/textsize_16sp"
            android:layout_centerInParent="true"
            android:text="@string/pay_sure" />
        <ImageView
            android:id="@+id/dialog_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_close"
            android:layout_marginTop="@dimen/margin_20p"
            android:layout_marginRight="@dimen/margin_20p"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30p"
            android:layout_marginLeft="@dimen/margin_40p"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_12sp"
                android:textColor="@color/color_aaaaaa"
                android:text="@string/passenger"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="@dimen/textsize_12sp"
                android:textColor="@color/color_aaaaaa"
                android:text="@string/travel"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="@dimen/textsize_12sp"
                android:textColor="@color/color_aaaaaa"
                android:text="@string/set_out_detail_time"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="@dimen/textsize_12sp"
                android:textColor="@color/color_aaaaaa"
                android:text="@string/should_pay"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30p"
            android:layout_marginLeft="@dimen/margin_40p"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_12sp"
                android:textColor="@color/color_222222"
                android:text="@string/passenger"
                android:id="@+id/passengerTv" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="@dimen/textsize_12sp"
                android:textColor="@color/color_222222"
                android:text="@string/travel"
                android:id="@+id/travel_city" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="@dimen/textsize_12sp"
                android:textColor="@color/color_222222"
                android:text="@string/set_out_detail_time"
                android:id="@+id/travel_time" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="@dimen/textsize_12sp"
                android:textColor="@color/orange"
                android:text="@string/should_pay"
                android:id="@+id/pay_amount" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="@dimen/textsize_12sp"
                android:textColor="@color/color_aaaaaa"
                android:text="@string/pay_money_tip"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/single_line_height_132px"
        android:layout_marginTop="@dimen/margin_40p"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/pay_btn_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textSize="@dimen/textsize_18sp"
            android:textColor="@color/color_222222"
            android:text="@string/dialog_default_cancel_title"
           />
        <TextView
            android:id="@+id/pay_btn_sure"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textSize="@dimen/textsize_18sp"
            android:textColor="@color/orange"
            android:text="@string/sure_pay" />
    </LinearLayout>
</LinearLayout>