<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/top_date"
        android:layout_alignParentTop="true"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/pre_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@mipmap/icon_back_un"
            android:drawablePadding="4dp"
            android:textSize="@dimen/textsize_12sp"
            android:layout_marginLeft="@dimen/margin_30p"
            android:textColor="@color/color_aaaaaa"
            android:layout_centerVertical="true"
            android:text="@string/pre_day"/>

        <TextView
            android:id="@+id/today_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/textsize_13sp"
            android:textColor="@color/color_222222"
            />

        <TextView
            android:id="@+id/next_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:drawableRight="@mipmap/icon_back_un"
            android:drawablePadding="4dp"
            android:textSize="@dimen/textsize_12sp"
            android:textColor="@color/color_aaaaaa"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_30p"
            android:text="@string/next_day"/>
        <View
            style="@style/personal_page_bottom_line"/>
    </RelativeLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshExpandableListView
        android:id="@+id/elistview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_date"
        android:background="@null"
        android:listSelector="@drawable/personal_item"
        android:cacheColorHint="@android:color/transparent"
        android:childIndicator="@null"
        android:divider="#00000000"
        android:fadingEdge="none"
        android:groupIndicator="@null"
        android:scrollbars="none" />

    <TextView
        style="@style/empty_tv" />

    <TextView style="@style/error_tv" />

    <com.ccy.chuchaiyi.widget.NestRadioGroup
        android:id="@+id/group_tab"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/time_tab"
            style="@style/main_RadioButton_style"
            android:drawableTop="@mipmap/icon_filter_time"
            android:paddingBottom="3dp"
            android:paddingTop="5dp"
            android:text="@string/time_tab" />

        <RadioButton
            android:id="@+id/price_tab"
            style="@style/main_RadioButton_style"
            android:drawableTop="@mipmap/icon_filter_money"
            android:paddingBottom="3dp"
            android:paddingTop="5dp"
            android:text="@string/price" />
        <RadioButton
            android:id="@+id/seat_tab"
            style="@style/main_RadioButton_style"
            android:drawableTop="@mipmap/icon_filter_seat"
            android:paddingBottom="3dp"
            android:paddingTop="5dp"
            android:text="@string/seat" />
        <FrameLayout
            android:id="@+id/company_fl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/company_tab"
                style="@style/main_Red_RadioButton_style"
                android:drawableTop="@mipmap/icon_filter_fli"
                android:paddingBottom="3dp"
                android:text="@string/plane_company" />

            <ImageView
                android:id="@+id/redTip"
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="12dp"
                android:background="@mipmap/icon_filter_dot"
                android:visibility="gone" />
        </FrameLayout>

    </com.ccy.chuchaiyi.widget.NestRadioGroup>
    <View
        android:layout_above="@+id/group_tab"
        style="@style/horizontal_line"/>
</RelativeLayout>