<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/color_f3eda9"
            android:paddingLeft="@dimen/margin_30p"
            android:paddingRight="@dimen/margin_30p"
            android:paddingBottom="@dimen/margin_20p"
            android:paddingTop="@dimen/margin_20p">

            <TextView
                android:id="@+id/return_order_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_222222"
                android:gravity="left"
                android:text="@string/return_order_title_tip"
                android:textSize="@dimen/textsize_11sp"
                />
            <TextView
                android:id="@+id/return_order_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_222222"
                android:gravity="left"
                android:text="@string/return_order_desc"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/textsize_11sp"
                />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/policy_btn_sure"
            android:background="@drawable/selector_common_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/single_line_height_132px"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/margin_30p"
            android:layout_marginRight="@dimen/margin_30p"
            android:layout_marginBottom="@dimen/margin_30p"
            android:textSize="@dimen/textsize_18sp"
            android:text="@string/sure"/>
    </LinearLayout>
</ScrollView>